[gd_scene load_steps=41 format=3 uid="uid://4retsmiwryg"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_eahfl"]
[ext_resource type="Texture2D" uid="uid://dhwug3in8dsov" path="res://textures/Logo.png" id="2_k6jbt"]
[ext_resource type="Shader" path="res://black.gdshader" id="2_s0bt1"]
[ext_resource type="PackedScene" uid="uid://d1nup2woc53yn" path="res://TextureButton_main_scene.tscn" id="5_xyuev"]
[ext_resource type="Shader" path="res://main_screen_button.gdshader" id="6_jsbn0"]
[ext_resource type="Texture2D" uid="uid://bfarpgwgdavrt" path="res://textures/start_game.png" id="6_u84kr"]
[ext_resource type="Texture2D" uid="uid://di4njx641i1jy" path="res://textures/start_game_hover.png" id="7_y52bc"]
[ext_resource type="Texture2D" uid="uid://b8401tjdd8ejx" path="res://textures/quit.png" id="8_ea72v"]
[ext_resource type="Texture2D" uid="uid://cbvp4n68inrqg" path="res://textures/quit_hover.png" id="9_csv7d"]
[ext_resource type="PackedScene" uid="uid://bi0ughilx11nx" path="res://select_mode.tscn" id="11_8h0c5"]
[ext_resource type="PackedScene" uid="uid://d0gw8aroovdgf" path="res://color_2.tscn" id="12_hgb5h"]
[ext_resource type="PackedScene" uid="uid://dmjgja0grou0f" path="res://color_3.tscn" id="13_bebgl"]
[ext_resource type="PackedScene" uid="uid://bhmd872c4jq0t" path="res://color_4.tscn" id="14_8cc71"]
[ext_resource type="PackedScene" uid="uid://1cqt5cryuqam" path="res://square.tscn" id="14_xnwvh"]
[ext_resource type="Shader" path="res://square.gdshader" id="15_7iql4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8xtuj"]
shader = ExtResource("2_s0bt1")

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_au6ow"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y73li"]
resource_local_to_scene = true
shader = ExtResource("6_jsbn0")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t45pw"]
resource_local_to_scene = true
shader = ExtResource("6_jsbn0")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_54k5r"]
resource_local_to_scene = true
shader = ExtResource("6_jsbn0")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7e0pg"]
resource_local_to_scene = true
shader = ExtResource("15_7iql4")
shader_parameter/color = Vector3(1, 1, 0)
shader_parameter/do_circle = false
shader_parameter/random_number = 0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w2lqc"]
resource_local_to_scene = true
shader = ExtResource("15_7iql4")
shader_parameter/color = Vector3(1, 1, 0)
shader_parameter/do_circle = false
shader_parameter/random_number = 0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2cf1w"]
resource_local_to_scene = true
shader = ExtResource("15_7iql4")
shader_parameter/color = Vector3(1, 1, 0)
shader_parameter/do_circle = false
shader_parameter/random_number = 0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8pt2q"]
resource_local_to_scene = true
shader = ExtResource("15_7iql4")
shader_parameter/color = Vector3(1, 1, 0)
shader_parameter/do_circle = true
shader_parameter/random_number = 0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i6c8f"]
resource_local_to_scene = true
shader = ExtResource("15_7iql4")
shader_parameter/color = Vector3(1, 1, 0)
shader_parameter/do_circle = false
shader_parameter/random_number = 0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2aw8p"]
resource_local_to_scene = true
shader = ExtResource("15_7iql4")
shader_parameter/color = Vector3(1, 1, 0)
shader_parameter/do_circle = true
shader_parameter/random_number = 0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f0gxw"]
resource_local_to_scene = true
shader = ExtResource("15_7iql4")
shader_parameter/color = Vector3(1, 1, 0)
shader_parameter/do_circle = true
shader_parameter/random_number = 0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cysfh"]
resource_local_to_scene = true
shader = ExtResource("15_7iql4")
shader_parameter/color = Vector3(1, 1, 0)
shader_parameter/do_circle = true
shader_parameter/random_number = 0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v1xfj"]
resource_local_to_scene = true
shader = ExtResource("15_7iql4")
shader_parameter/color = Vector3(1, 1, 0)
shader_parameter/do_circle = true
shader_parameter/random_number = 0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cfrcd"]
resource_local_to_scene = true
shader = ExtResource("15_7iql4")
shader_parameter/color = Vector3(1, 1, 0)
shader_parameter/do_circle = true
shader_parameter/random_number = 0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_amnpo"]
resource_local_to_scene = true
shader = ExtResource("15_7iql4")
shader_parameter/color = Vector3(1, 1, 0)
shader_parameter/do_circle = true
shader_parameter/random_number = 0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_62msl"]
resource_local_to_scene = true
shader = ExtResource("15_7iql4")
shader_parameter/color = Vector3(1, 1, 0)
shader_parameter/do_circle = true
shader_parameter/random_number = 0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mrgpq"]
resource_local_to_scene = true
shader = ExtResource("15_7iql4")
shader_parameter/color = Vector3(1, 1, 0)
shader_parameter/do_circle = true
shader_parameter/random_number = 0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6gm2w"]
resource_local_to_scene = true
shader = ExtResource("15_7iql4")
shader_parameter/color = Vector3(1, 1, 0)
shader_parameter/do_circle = true
shader_parameter/random_number = 0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1bipq"]
resource_local_to_scene = true
shader = ExtResource("15_7iql4")
shader_parameter/color = Vector3(1, 1, 0)
shader_parameter/do_circle = true
shader_parameter/random_number = 0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n4fsi"]
resource_local_to_scene = true
shader = ExtResource("15_7iql4")
shader_parameter/color = Vector3(1, 1, 0)
shader_parameter/do_circle = true
shader_parameter/random_number = 0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k1cmw"]
resource_local_to_scene = true
shader = ExtResource("15_7iql4")
shader_parameter/color = Vector3(1, 1, 0)
shader_parameter/do_circle = true
shader_parameter/random_number = 0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1ex3s"]
resource_local_to_scene = true
shader = ExtResource("15_7iql4")
shader_parameter/color = Vector3(1, 1, 0)
shader_parameter/do_circle = true
shader_parameter/random_number = 0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ymof1"]
resource_local_to_scene = true
shader = ExtResource("15_7iql4")
shader_parameter/color = Vector3(1, 1, 0)
shader_parameter/do_circle = true
shader_parameter/random_number = 0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5xeex"]
resource_local_to_scene = true
shader = ExtResource("15_7iql4")
shader_parameter/color = Vector3(1, 1, 0)
shader_parameter/do_circle = true
shader_parameter/random_number = 0

[node name="main_menu" type="Node2D"]
script = ExtResource("1_eahfl")

[node name="background" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 960.0
offset_top = 540.0
offset_right = 1000.0
offset_bottom = 580.0

[node name="TextureRect" type="TextureRect" parent="background"]
z_index = -10
material = SubResource("ShaderMaterial_8xtuj")
layout_mode = 0
offset_left = -960.0
offset_top = -540.0
offset_right = 985.0
offset_bottom = 553.0
texture = SubResource("PlaceholderTexture2D_au6ow")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 5
position = Vector2(1375, 133)
scale = Vector2(11.55, 19.0556)
texture = ExtResource("2_k6jbt")

[node name="position" type="Node2D" parent="."]
position = Vector2(869, 351)
scale = Vector2(3, 3)

[node name="button_position" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 136.0
offset_top = 848.0
offset_right = 136.0
offset_bottom = 848.0

[node name="VBoxContainer" type="VBoxContainer" parent="button_position"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 78.0
scale = Vector2(2.5, 2.5)
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="button_position/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="start" parent="button_position/VBoxContainer/MarginContainer" instance=ExtResource("5_xyuev")]
material = SubResource("ShaderMaterial_y73li")
layout_mode = 2
texture_normal = ExtResource("6_u84kr")
texture_hover = ExtResource("7_y52bc")
texture_focused = ExtResource("7_y52bc")

[node name="MarginContainer2" type="MarginContainer" parent="button_position/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="quit" parent="button_position/VBoxContainer/MarginContainer2" instance=ExtResource("5_xyuev")]
material = SubResource("ShaderMaterial_t45pw")
layout_mode = 2
texture_normal = ExtResource("8_ea72v")
texture_hover = ExtResource("9_csv7d")
texture_focused = ExtResource("9_csv7d")

[node name="select_mode" parent="." instance=ExtResource("11_8h0c5")]
offset_left = 540.0
offset_right = 1444.0
pivot_offset = Vector2(450, 368)

[node name="color_2" parent="." instance=ExtResource("12_hgb5h")]
offset_left = 540.0
offset_top = 181.0
offset_right = 1444.0
offset_bottom = 917.0

[node name="color_3" parent="." instance=ExtResource("13_bebgl")]
offset_left = 540.0
offset_top = 181.0
offset_right = 1444.0
offset_bottom = 917.0

[node name="color_4" parent="." instance=ExtResource("14_8cc71")]
material = SubResource("ShaderMaterial_54k5r")
offset_left = 540.0
offset_top = 181.0
offset_right = 1444.0
offset_bottom = 917.0

[node name="square" parent="." instance=ExtResource("14_xnwvh")]
material = SubResource("ShaderMaterial_7e0pg")
position = Vector2(990, 540)

[node name="square3" parent="." instance=ExtResource("14_xnwvh")]
material = SubResource("ShaderMaterial_w2lqc")
position = Vector2(990, 540)

[node name="square4" parent="." instance=ExtResource("14_xnwvh")]
material = SubResource("ShaderMaterial_2cf1w")
position = Vector2(990, 540)

[node name="square5" parent="." instance=ExtResource("14_xnwvh")]
material = SubResource("ShaderMaterial_8pt2q")
position = Vector2(990, 540)

[node name="square6" parent="." instance=ExtResource("14_xnwvh")]
material = SubResource("ShaderMaterial_i6c8f")
position = Vector2(990, 540)

[node name="square7" parent="." instance=ExtResource("14_xnwvh")]
material = SubResource("ShaderMaterial_2aw8p")
position = Vector2(990, 540)

[node name="square8" parent="." instance=ExtResource("14_xnwvh")]
material = SubResource("ShaderMaterial_f0gxw")
position = Vector2(990, 540)

[node name="square9" parent="." instance=ExtResource("14_xnwvh")]
material = SubResource("ShaderMaterial_cysfh")
position = Vector2(990, 540)

[node name="square10" parent="." instance=ExtResource("14_xnwvh")]
material = SubResource("ShaderMaterial_v1xfj")
position = Vector2(990, 540)

[node name="square11" parent="." instance=ExtResource("14_xnwvh")]
material = SubResource("ShaderMaterial_cfrcd")
position = Vector2(990, 540)

[node name="square12" parent="." instance=ExtResource("14_xnwvh")]
material = SubResource("ShaderMaterial_amnpo")
position = Vector2(990, 540)

[node name="square13" parent="." instance=ExtResource("14_xnwvh")]
material = SubResource("ShaderMaterial_62msl")
position = Vector2(990, 540)

[node name="square14" parent="." instance=ExtResource("14_xnwvh")]
material = SubResource("ShaderMaterial_mrgpq")
position = Vector2(990, 540)

[node name="square15" parent="." instance=ExtResource("14_xnwvh")]
material = SubResource("ShaderMaterial_6gm2w")
position = Vector2(990, 540)

[node name="square16" parent="." instance=ExtResource("14_xnwvh")]
material = SubResource("ShaderMaterial_1bipq")
position = Vector2(990, 540)

[node name="square17" parent="." instance=ExtResource("14_xnwvh")]
material = SubResource("ShaderMaterial_n4fsi")
position = Vector2(990, 540)

[node name="square18" parent="." instance=ExtResource("14_xnwvh")]
material = SubResource("ShaderMaterial_k1cmw")
position = Vector2(990, 540)

[node name="square19" parent="." instance=ExtResource("14_xnwvh")]
material = SubResource("ShaderMaterial_1ex3s")
position = Vector2(990, 540)

[node name="square20" parent="." instance=ExtResource("14_xnwvh")]
material = SubResource("ShaderMaterial_ymof1")
position = Vector2(990, 540)

[node name="square21" parent="." instance=ExtResource("14_xnwvh")]
material = SubResource("ShaderMaterial_5xeex")
position = Vector2(990, 540)
